--- a/cluster/media/gaps/gaps.yaml
+++ b/cluster/media/gaps/gaps.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: gaps
-  namespace: default
+  namespace: media
 spec:
   releaseName: gaps
   interval: 5m
@@ -24,7 +24,7 @@ spec:
     env:
       TZ: "America/New_York"
     ingress:
-      enabled: false
+      enabled: true
       annotations:
         kubernetes.io/ingress.class: "nginx"
       hosts:
