--- a/cluster/collab/gitea/gitea.yaml
+++ b/cluster/collab/gitea/gitea.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: gitea
-  namespace: default
+  namespace: collab
 spec:
   releaseName: gitea
   interval: 5m
