add securityContext to resilio

--- a/cluster/media/resilio-sync/resilio-sync-ryan.yaml
+++ b/cluster/media/resilio-sync/resilio-sync-ryan.yaml
@@ -47,3 +47,7 @@ spec:
       - name: media-nas
         persistentVolumeClaim:
           claimName: media-nfs-tank-share-pvc
+    podSecurityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
