add puid/pgid to resilio-sync

--- a/cluster/media/resilio-sync/resilio-sync-ryan.yaml
+++ b/cluster/media/resilio-sync/resilio-sync-ryan.yaml
@@ -23,6 +23,8 @@ spec:
       tag: version-2.7.2.1375
     env:
       TZ: "America/New_York"
+      PUID: "1000"
+      PGID: "1000"
     ingress:
       enabled: true
       annotations:
