--- a/cluster/media/_pvc/pvc.yaml
+++ b/cluster/media/_pvc/pvc.yaml
@@ -58,3 +58,63 @@ spec:
   resources:
     requests:
       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: media-nfs-home-ryan-pv
+spec:
+  capacity:
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  claimRef:
+    namespace: media
+    name: media-nfs-home-ryan-pvc
+  storageClassName: nfs
+  nfs:
+    server: nas.holthome.net
+    path: "/mnt/tank/home/ryan"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: media-nfs-home-ryan-pvc
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: nfs
+  resources:
+    requests:
+      storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: media-nfs-home-stefanie-pv
+spec:
+  capacity:
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  claimRef:
+    namespace: media
+    name: media-nfs-home-stefanie-pvc
+  storageClassName: nfs
+  nfs:
+    server: nas.holthome.net
+    path: "/mnt/tank/home/stefanie"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: media-nfs-home-stefanie-pvc
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: nfs
+  resources:
+    requests:
+      storage: 1Mi
