--- a/cluster/default/matrix/matrix.yaml
+++ b/cluster/default/matrix/matrix.yaml
@@ -1,87 +1,87 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: matrix
-  namespace: default
-spec:
-  interval: 5m
-  chart:
-    spec:
-      # renovate: registryUrl=https://dacruz21.github.io/helm-charts
-      chart: matrix
-      version: 2.7.0
-      sourceRef:
-        kind: HelmRepository
-        name: dacruz21-charts
-        namespace: flux-system
-      interval: 5m
-  values:
-    matrix:
-      serverName: ryanholt.net
-      encryptByDefault: all
-      adminEmail: "ryan@ryanholt.net"
-      registration:
-        enabled: true
-    volumes:
-      media:
-        storageClass: longhorn
-      signingKey:
-        storageClass: longhorn
-    postgresql:
-      image:
-        repository: bitnami/postgresql
-        tag: 11.11.0-debian-10-r9
-      persistence:
-        enabled: true
-        storageClass: longhorn
-        size: 8Gi
-    ingress:
-      enabled: true
-      annotations:
-        external-dns.alpha.kubernetes.io/target: 10.20.0.2
-        kubernetes.io/ingress.class: "nginx"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-prod"
-      hosts:
-        synapse: matrix.ryanholt.net
-        riot: element.ryanholt.net
-        federation: ryanholt.net
-      tls:
-      - hosts:
-        - matrix.ryanholt.net
-        - element.ryanholt.net
-        - ryanholt.net
-        secretName: matrix-cert
-    synapse:
-      image:
-        repository: "matrixdotorg/synapse"
-        tag: v1.30.0
-    riot:
-      image:
-        repository: "vectorim/riot-web"
-        tag: v1.7.23
-    coturn:
-      image:
-        repository: "instrumentisto/coturn"
-        tag: "4.5.1.3"
-    mail:
-      enabled: true
-      from: "matrix@ryanholt.net"
-      relay:
-        enabled: false
-      external:
-        host: smtp.holthome.net
-        port: 25
-    # bridges:
-    #   discord:
-    #     enabled: true
-    #     image:
-    #       repository: halfshot/matrix-appservice-discord
-    #       tag: latest
-    networkPolicies:
-      enabled: false
-  valuesFrom:
-  - kind: Secret
-    name: "matrix-helm-values"
-    optional: false
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: matrix
+#   namespace: default
+# spec:
+#   interval: 5m
+#   chart:
+#     spec:
+#       # renovate: registryUrl=https://dacruz21.github.io/helm-charts
+#       chart: matrix
+#       version: 2.7.0
+#       sourceRef:
+#         kind: HelmRepository
+#         name: dacruz21-charts
+#         namespace: flux-system
+#       interval: 5m
+#   values:
+#     matrix:
+#       serverName: ryanholt.net
+#       encryptByDefault: all
+#       adminEmail: "ryan@ryanholt.net"
+#       registration:
+#         enabled: true
+#     volumes:
+#       media:
+#         storageClass: longhorn
+#       signingKey:
+#         storageClass: longhorn
+#     postgresql:
+#       image:
+#         repository: bitnami/postgresql
+#         tag: 11.11.0-debian-10-r9
+#       persistence:
+#         enabled: true
+#         storageClass: longhorn
+#         size: 8Gi
+#     ingress:
+#       enabled: true
+#       annotations:
+#         external-dns.alpha.kubernetes.io/target: 10.20.0.2
+#         kubernetes.io/ingress.class: "nginx"
+#         kubernetes.io/tls-acme: "true"
+#         cert-manager.io/cluster-issuer: "letsencrypt-prod"
+#       hosts:
+#         synapse: matrix.ryanholt.net
+#         riot: element.ryanholt.net
+#         federation: ryanholt.net
+#       tls:
+#       - hosts:
+#         - matrix.ryanholt.net
+#         - element.ryanholt.net
+#         - ryanholt.net
+#         secretName: matrix-cert
+#     synapse:
+#       image:
+#         repository: "matrixdotorg/synapse"
+#         tag: v1.30.0
+#     riot:
+#       image:
+#         repository: "vectorim/riot-web"
+#         tag: v1.7.23
+#     coturn:
+#       image:
+#         repository: "instrumentisto/coturn"
+#         tag: "4.5.1.3"
+#     mail:
+#       enabled: true
+#       from: "matrix@ryanholt.net"
+#       relay:
+#         enabled: false
+#       external:
+#         host: smtp.holthome.net
+#         port: 25
+#     # bridges:
+#     #   discord:
+#     #     enabled: true
+#     #     image:
+#     #       repository: halfshot/matrix-appservice-discord
+#     #       tag: latest
+#     networkPolicies:
+#       enabled: false
+#   valuesFrom:
+#   - kind: Secret
+#     name: "matrix-helm-values"
+#     optional: false
