--- a/cluster/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/cluster/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -5,6 +5,7 @@ metadata:
   name: kube-prometheus-stack
   namespace: monitoring
 spec:
+  fullnameOverride: prometheus
   interval: 5m
   chart:
     spec:
@@ -41,7 +42,7 @@ spec:
         storage:
           volumeClaimTemplate:
             spec:
-              storageClassName: longhorn
+              storageClassName: rook-ceph-block
               resources:
                 requests:
                   storage: 10Gi
@@ -295,7 +296,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: longhorn
+              storageClassName: rook-ceph-block
               resources:
                 requests:
                   storage: 10Gi
