--- a/cluster/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/cluster/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -5,7 +5,6 @@ metadata:
   name: kube-prometheus-stack
   namespace: monitoring
 spec:
-  fullnameOverride: prometheus
   interval: 5m
   chart:
     spec:
@@ -18,6 +17,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    fullnameOverride: x
     # defaultRules:
     #   rules:
     #     kubeApiserverAvailability: false
@@ -261,6 +261,7 @@ spec:
       - key: "armhf"
         operator: "Exists"
     prometheus:
+      fullnameOverride: prometheus
       ingress:
         enabled: true
         annotations:
@@ -306,6 +307,10 @@ spec:
           objectStorageConfig:
             name: thanos
             key: object-store.yaml
+    kube-state-metrics:
+      fullnameOverride: kube-state-metrics
+    prometheus-node-exporter:
+      fullnameOverride: node-exporter
   valuesFrom:
   - kind: Secret
     name: "kube-prometheus-stack-helm-values"
