add the override back in

--- a/cluster/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/cluster/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -17,6 +17,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    fullnameOverride: x
     # defaultRules:
     #   rules:
     #     kubeApiserverAvailability: false
