--- a/cluster/monitoring/botkube/botkube.yaml
+++ b/cluster/monitoring/botkube/botkube.yaml
@@ -39,7 +39,7 @@ spec:
             ignore:                 # List of namespaces to be ignored (omitempty), used only with include: all
               - rook-ceph                    # example : include [all], ignore [x,y,z]
               - kube-system
-              - kasten
+              - kasten-io
           events:                   # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
             - create
             - delete
@@ -131,7 +131,7 @@ spec:
               - all
             ignore:
               - rook-ceph
-              - kasten
+              - kasten-io
           events:
             - delete
             - error
