fix mount location for pv

--- a/cluster/media/plex/plex.yaml
+++ b/cluster/media/plex/plex.yaml
@@ -53,7 +53,7 @@ spec:
         existingClaim: plex-config-pvc
     additionalVolumeMounts:
     - name: media-nas
-      mountPath: "/media"
+      mountPath: "/data"
     additionalVolumes:
     - name: media-nas
       persistentVolumeClaim:
