--- a/cluster/monitoring/alertmanager-bot/manifest.yaml
+++ b/cluster/monitoring/alertmanager-bot/manifest.yaml
@@ -89,4 +89,4 @@ items:
         resources:
           requests:
             storage: 1Gi
-        storageClassName: longhorn
+        storageClassName: rook-ceph-block
