--- a/cluster/longhorn-system/longhorn/servicemonitor.yaml
+++ b/cluster/longhorn-system/longhorn/servicemonitor.yaml
@@ -1,17 +1,17 @@
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: longhorn-prometheus-servicemonitor
-  namespace: longhorn-system
-  labels:
-    name: longhorn-prometheus-servicemonitor
-spec:
-  selector:
-    matchLabels:
-      app: longhorn-manager
-  namespaceSelector:
-    matchNames:
-    - longhorn-system
-  endpoints:
-  - port: manager
+# ---
+# apiVersion: monitoring.coreos.com/v1
+# kind: ServiceMonitor
+# metadata:
+#   name: longhorn-prometheus-servicemonitor
+#   namespace: longhorn-system
+#   labels:
+#     name: longhorn-prometheus-servicemonitor
+# spec:
+#   selector:
+#     matchLabels:
+#       app: longhorn-manager
+#   namespaceSelector:
+#     matchNames:
+#     - longhorn-system
+#   endpoints:
+#   - port: manager
