--- a/cluster/longhorn-system/namespace.yaml
+++ b/cluster/longhorn-system/namespace.yaml
@@ -1,7 +1,7 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: longhorn-system
-  labels:
-    istio-injection: disabled
+# ---
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: longhorn-system
+#   labels:
+#     istio-injection: disabled
