rotate secret for kasten

--- a/cluster/kasten-io/k10/k10-secrets.enc.yaml
+++ b/cluster/kasten-io/k10/k10-secrets.enc.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 data:
-  providerURL: ENC[AES256_GCM,data:VyMT3E3CBQfqRTXZqRBkMiewHv7Vgc9stfzmdmMtkd8=,iv:Np6rwchEKFQIR1R5pCcdrNIj65elLnhLNcCSrvv/Bb0=,tag:fmdMg8wgxqgX2QhlPXZaSA==,type:str]
-  redirectURL: ENC[AES256_GCM,data:v2SPDYlF8otMQYLcECj2CX3EUlohHz+pkROI9ZuZA+s=,iv:t5O8gBw58khUEVpaZ/Qu68scdrTxmlokKFVl2/bUbwo=,tag:75YXyV4G9C7jPtb2WGVwmg==,type:str]
-  client-id: ENC[AES256_GCM,data:v1G5ng==,iv:CHinNd3D8Q65OoevIiJTW0ZU9VbStTAU5xqI07FPFc0=,tag:wW6LAOmiZSVNN+ysmJQ7tw==,type:str]
-  client-secret: ENC[AES256_GCM,data:Z2MG69tyycz3If5QyUV1r8ZTRYO8SXVdVc07OdCNZbI/l2Ljv7uatGbGZZroZk1XoV+4wZ1Tmdg=,iv:jD10Qa59F8yJyC6DVjlf+HaeyMjUVW7lF6sdriMU6HI=,tag:BKyl7upENId3MJmrObYCyQ==,type:str]
+  providerURL: ENC[AES256_GCM,data:nbybWMEVcHD+nzyxEuLfuSDSA/ZSxYHF4P66YYDAjPI=,iv:4QwnLc5ChoFVkEalcUoinW+i8f8emjMJ9mYKoSba+gI=,tag:NAfMXLPhHDzJMreAZrRRBA==,type:str]
+  redirectURL: ENC[AES256_GCM,data:xno1aonmR+gQIgsoNA+OncHg7iXN8hTIXef9tygXK8Q=,iv:XCC/oIl7mQzw3wIGURf7rJgZNSrOaexoYhKJ/jdC54Y=,tag:HLLJRc9YFVveafZgqDlBGQ==,type:str]
+  client-id: ENC[AES256_GCM,data:GQU/2A==,iv:rLXwWj9mBjQFZKuztdrsvNiCGgoA8wQ3QnVSC1WYDPU=,tag:aVTK0zADteNVToVzp9QclQ==,type:str]
+  client-secret: ENC[AES256_GCM,data:S7Yj89/7MixH2xliNUwrpJ8CC7zuOXXONefkMOs1aYKZHXzB/QTFSGYGEZgzkF9prYeYaOSNaag=,iv:nSqbQkNNSV+MzqkdkbakcVtaaWYOH3FL+2fKFJIx+3c=,tag:9KNdWktkbDnImELh5nAtkQ==,type:str]
   groupAllowList: ""
   groupClaim: ""
   groupPrefix: ""
   logout-url: ""
-  prompt: ENC[AES256_GCM,data:Nlf7N7q7IDmcN7tj8vDHDrQoBUY=,iv:ZcovsATbzLaqJYlFvr5w0kf2Jn3hUijTSMYBuHDH2Uo=,tag:tmr8Iz8y47+Mjdr9sfXtow==,type:str]
-  provider-url: ENC[AES256_GCM,data:jiYOVTeynOAhKQi0yrIHPz8EM714j3eyoK+LxDZsh34=,iv:B+nNCQxHDXgF531/5uYT5VdJjOm9fqI3YdYSZhIt+KE=,tag:4lKLQSS0ccTB3quiWQubXA==,type:str]
-  redirect-url: ENC[AES256_GCM,data:7w9xixOBpXrK71LoUfuztYWMSmBt2Gra57QmuryQFSc=,iv:eKJ6Q4PpieQ9j6rw/ouBwJYna2iRk7XdQRa7y9o9eDY=,tag:lfOI5C6PdbwLU1cSBVjteg==,type:str]
-  scopes: ENC[AES256_GCM,data://1bqPgfToK4p2hgzNl2kzFwCLY=,iv:hk7DYQlFgI72QGoeq+IdNCD7N0MozmgtQdtQnU8jDbE=,tag:b7X9KuCUufWbwRxzeB2sKQ==,type:str]
-  usernameClaim: ENC[AES256_GCM,data:1XJGuOsZOS4=,iv:zF7hQqa2csnlJTZaDMe4JdfZqbxAvFcoaZ3HRjalVTg=,tag:H/D2pbtXq8YpX0owe5pXAg==,type:str]
+  prompt: ENC[AES256_GCM,data:fAcG+r3phIih+LSfzb2eRNV9NAM=,iv:WHSNUMvLlrkAhUpCK2WLAL7kgS4ct0BNAf6pH+OnCrw=,tag:RBNRIzDWEGXdVwgXBpKMjQ==,type:str]
+  provider-url: ENC[AES256_GCM,data:PPJGB6zJ2v4CTcsZK0rMEMOz4vEqzwCmfbTpxc1Oy08=,iv:fs4tQEXZLWcC0CqZJQx0rSZac7IgHLm9tYSiuF1dw+Y=,tag:n0Rd108zpR+51a3oe9StHg==,type:str]
+  redirect-url: ENC[AES256_GCM,data:eQm6c8qWoDYwkSyS1y2qoJ2cWAVpVV75GOusIAP1JRU=,iv:L3d4iAZKrT7fCWGFplu917Un2soIa7jMlk0zneBgcdg=,tag:/OhzVcSn+d5s8Wkx/JuKUw==,type:str]
+  scopes: ENC[AES256_GCM,data:3Zmx+bD/pS3IXV3FZVvoBXP0LLk=,iv:Qi4RuMzBzKANnbfR5xqHH+MsslbsAhi0KR7pXUWdNP0=,tag:L4Dwx+ccCkYYnIiWbxvcnA==,type:str]
+  usernameClaim: ENC[AES256_GCM,data:vaDwbsmruvE=,iv:O6MdSpZs65dYMppHoMJffPyGGoggYNilwyhFeZTSnrc=,tag:DVJuPMXymvD+EmF+QAhtBg==,type:str]
   usernamePrefix: ""
 kind: Secret
 metadata:
@@ -24,48 +24,49 @@ sops:
   gcp_kms: []
   azure_kv: []
   hc_vault: []
-  lastmodified: "2021-03-03T18:04:07Z"
-  mac: ENC[AES256_GCM,data:oQwSPeanqrh2jufSafYLKZiNQ7+d+j2Nsybm4zdYJC5E3OpSNeBd03fpOFYEtcF1D1Y2PB1H9zaCRAE8B3jKjVgbQh4XTB61Vsqo0YU59utimtE/5qvDvYjJmhJ6NZlYAoWI/EHlP9mG0eLXN9vqJgxbO9UcaQDgTw+Wxdgh6Ng=,iv:upELJXh2050QLToctVtpnBGFK6iFsG2XU+Ct2b1+KOw=,tag:RPs/uMb4LX01fYVdDa4bhQ==,type:str]
+  age: []
+  lastmodified: "2021-03-26T18:23:35Z"
+  mac: ENC[AES256_GCM,data:gqIYHclHilPZur1c5mQNyD7L2Kn4LvTp6HpcLZdDhLYA2c58KrkElN9VUQ/DrUtepTdrhTUZU7g7aLapyzAgse2CSIJu6KmSDIjmIC21meHBzc/WcyOKeRxf33uuSlfCCFzQrQWzW8iTSA0wA8rpfjcJc6YnUz/S6YQbjRdeFCU=,iv:IF4DRr+FhzsliHfijEF1FK1G5EzytoyeqPpz2LuRNKo=,tag:SRDHAtAUy2zp7abzvUGuGA==,type:str]
   pgp:
-    - created_at: "2021-03-03T18:04:07Z"
+    - created_at: "2021-03-26T18:23:34Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQILA8oSIqtHvng8AQ/3UjMqNIPwwNeSEevzjMflFm+tomwDlFB89spnJD7YuSX6
-        ZlQViEoUt21fOqhrbLV3R4HtCkYMZP/KQn0Kg92dAx+O1jZNC+NWSB6Hz5W+3nY6
-        p759NW1OY2lXsB5C6XJD/QjefDIlVMLucQfjI8Qb/29VGrGZ39pK0ruVshIdkArW
-        +Vl6juvkbZN8Kk+gFfAovRietq2Sa1moLP6wmkfSfBxxaFN9i1DjwgkKbk8QAttD
-        XCPXmS7jO42dMgx08tTPbk3ayRgl92arZ0DenjoPLJacPmcHnnKqQdrZzanb4JQo
-        3J/QSl/hGAlREpxn8PI+LkHnyOs/zWGbUIL9UxvP5KS7+JdW1Tc/4Cf5xJ9pvkrB
-        okkQ8iZNp2fJ3/oa960lZkkaib/cO1n/hVMgvODaCmMxjrlWS0q1L6uZYhYNG6IJ
-        eGLxFMyqLG1aiClGBJUZnvKyfWZAbjeeD6aHFtKyknmA4boNtxqqsT2OKCxSRPQl
-        R8HMzFr+g+cgtZ5s4CzyU6TnoqixMzuv31wR21w0IngNCzyTKM8i/YczMeJ4FVQO
-        hxf/FT/wWtlADTdfq3xMmuwI4Kyrd00kmAMWHquofnpE2DgL7PrPsydDMCKtVOm3
-        pnWQ2p71kR7yzU9QqLmJalQcdxfENzckQNtSqJTQiqVgxjOcrYsirTAvt3mDH9Jc
-        AYADdLvslvV67WO9nkFOvLu95ElicC7itFH8nl9SnT16XQEB59iPJH6WqqLVKaJh
-        9y5aqT8TIKENqqwubVaXnDrWvVu+aRBqbwzGhfAfnGp7tOTWyX7UE5KZitY=
-        =Z8yl
+        hQIMA8oSIqtHvng8AQ//dP7IZrywlJ0GiiHtndJ+9QRxH1BOhmjWNzEutrjBzH9Z
+        f2eQ34jVZvO+wSUIJ4m1S2ezFA2j82/l00/45P8nrbHU15f1/pXSzRt9V2Psee5V
+        wqYvtTE+M1amiwVlVMKzLmFiG8/p8UU2p20eiZLsWi974FfJlKr5Q3guEtt16Nib
+        DjIcXMGWZGnzOsAK0/uxcKgnSB716YLGSUXbHJFGbCA0xJ5TzYVaEr+DFLk35ZI0
+        CIIZjAlAfnNnTLXIfpoluBWRr6Z5eDf9NpHldJ2XEEOlxlM2PGjZTG5lqmzEkz/J
+        AMM3XsD558tQmZFVoptuFoSGF+CsAD3pnwEQIQfatkh1f2UvajTwdEaCLKQ4Vw/r
+        BkqUzlgzfo8Hc2DsAJuYrjGRpP6i57unBJZKVWojRA1J6TKP3ufXHk8cCo9hg2Gz
+        JJ5487hnrLbPTo9xWc9Tu3O1SQ+PRHT1M4p3XyMh6OtYywnJy9JCc21YRwCxHGOi
+        q9Hio014WIcBnmj5JZS6OBCO7RZLalIJhAD12ujMhNfbV+k1O5x0hwBnyWdnQQ3M
+        mKiOcI3AjT9jH5L4Gsr0Cll1FpDW6wetitxizLCyAAabQefbvyr0GFD3D54goqd0
+        NOaKvjiNRi4Rn2jOKjFBSgeyXMkokXrlmccMaikMxPjgkw31Jfu0ErURHvcccqPS
+        XAFvzldZcvCY6mcolUEmPQ25FDjWhxZqXAhAa3N1cnlOu6m3OJJacvcj18vnV8Ms
+        NrU6kwDXrMPylnXVdUGx6nPOeozlBHVMSZHbPhj1Wn1NIllDKrKDubd1CiLi
+        =DtF+
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-03-03T18:04:07Z"
+    - created_at: "2021-03-26T18:23:34Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ/+PAj/87ukMhnkpX3X72ty2ov+F5M5N0OYhpEtRIAcyEE9
-        riMgyFkggRz461Ttx87vCrflBfog1t5sOfEeBs95P/sVVcwJKgSulZIQ3JP4M74p
-        BZhmUZ0cxMaNJ2iFz4Cqx7vwRPQXTJaQWSwjohfz16dN1CmOxy8/fJgj5E5AKeP0
-        kE0+03PtzsmSSc4hU/9I+gToFzAD1PUaLd2ZdA5j3k9CukPEr1pGSmRd71yB17h4
-        7GkuDcR9IbvJGIlZOsT+bvWe2WZlpWte3lp7BbR/egbjV5VtieeRzkQWsxlzl88w
-        dNx296DKO+Rdqcv1FMaoOoTWqdwoZ1stLbEPzZQvXME/I458EVzbUpqZJ7AlwM8X
-        L2RYRdgZJ4PhK0AisU4QCxvWm0o8fhwddyWGYA9MnJIAPW0RWr+5mj6nDfHxXW37
-        +RAq9lmC3V95KNY1+6hG0z5hv2oDoVtlMbiiLrEPYWXrP511Xj8p7yngXPpa47U8
-        y8LO1ylpPsF1ZzraTvPcj1s10Zm/Y3eTM9X8c3sywidnsC7DfSjg4/XgN1s0MTCI
-        l7cFr5tqRbh8XdduTo2SgLP6dNTpZ1V5dW4MxwKo1FiGmv8GP3cHaTezntORyhS8
-        xx8Bbk46J/Zl8uI19i+f29oSmvf48SF397nAVoBrC4roObhuzCsj4WL0eqOfnaPS
-        XAFjLM0Bg6d1mVQgWRDVWYVl0g6VRId2l7TQO2vfz/6VoJw9H43xqkWgCai87NQ5
-        DUbX/p2ehYIo1lyU4yVeHalfk0G7S3jociPkdDv8Dmsfha8u3IVLxG4CTh0l
-        =F1Ug
+        hQIMA8ORz3KkY6O4AQ/8DCRcbNGYKcbbriV5SWqAqd+WK427yXOg4GS3y49Y1H9d
+        AuEXPNpMzMiofj5Bw2nATT+dOVT6jjmZ4x8UBkNFaTqZwhjhobCUQbpHHs8nddgp
+        5NeTIP7XaAwB891UPJppwZS26KAMnirYdmSjjalpuIYI3RvZjN0jf0WELYL0nEKH
+        2JFNL1wVWEUdU3CkfcbgzLYvgGDmUFa+sVxnKuET6xTqLBI8ufp3IKoDmePds3vk
+        X6RtEHAJJgQl/gognRsZK10JeTqEHxUSBxv7zROUbBcRFdHoqCAh99XRPyyDErqP
+        9Dz9TLOQ8rHemsmc5QBPyBbn5mCLbYK2mybGmoZNFkLa4A4IgOjEj//8YUs7Bulh
+        hWSOQrKJJsjVDAI1UMRKOOqobsmAcOyCDJt2pDtF4Hiak8uvde1EZtTnVzz/bC3j
+        eWwIiiGSMaYwFpCyTx5ZIP5v1Iju7s8B49ZLTFfEYAbk4G+/VpgXNPlXbAOf8QjB
+        NB5unCdkMtQ71/sNoQCTm1cVKhiiPpKa9uynpVNNEdAURGgtIQ0waQWuLS8q4Sqf
+        cOQeuu1TIM8RViF9Pq0I6t5C+oNIa+XId2j+MXpymikG/dhEhk4TJN51JLIANne2
+        8UiAiPEeuSmspt/519x8h1y0jQIdZk7/kINbigO84pCFp1kaZx0AfMqBVN4eiN3S
+        XAF/NJxWjIeggUJEpgdskOreXMDJ+FyXXtQhU9Nv7s4niuBLYFtdBU/3os/JKgac
+        q14fuT6Aefxb87tPwDtesEOJ2X9+PXDpgziouvBeA7vV5wTSJfXqBJTzrzED
+        =PY0E
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
-  version: 3.6.1
+  version: 3.7.0
