--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -67,11 +67,13 @@
       "allowedVersions": "<4.3.0",
       "packageNames": ["ghcr.io/k8s-at-home/qbittorrent"]
     },
-    // Version strategies
+    // version strategies
     {
-      "datasources": ["docker"],
+      "matchDatasources": ["docker"],
       "versioning": "loose",
-      "packageNames": ["plexinc/pms-docker"]
+      "matchPackageNames": [
+        "ghcr.io/k8s-at-home/plex"
+      ]
     },
     // Enable auto-merge
     {
