--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -1,89 +1,73 @@
-# yamllint disable
 apiVersion: v1
 kind: Secret
+type: Opaque
 metadata:
-    name: cluster-secrets
-    namespace: flux-system
-stringData:
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:ZgHaijvfTP5Yd50A/7fS+rPyECy8IJ5eKFMI4HiHf/v106SXLA+48s57up5fHctRq+f+X0Vzgp+zu7mqbLl+Kb5HlcCHyaIdl+ClQ/+Hz51ISzaBdAepPzXP2KuRGYg1JbzdArCPhRscWoo7vUggjs5X7Q88DIib2CQg0GhM,iv:5XWFekohxmDNYZ9aCIw/TQjN1CYlx1owJbtNKoPx09g=,tag:QcsQR/EsNVmYLmYUabO6lA==,type:str]
-    SECRET_BOTKUBE_DISCORD_BOT_ID: ENC[AES256_GCM,data:0nSaGz6UQp2VvNplq14e7xtw,iv:yUGcsoa1Dz8fvVDH9uNDZEYMyJ3o2mHqqy0cGAuUZ7Q=,tag:wjUGK46uKZIn7Ej7nn9HKg==,type:str]
-    SECRET_BOTKUBE_DISCORD_CHANNEL_ID: ENC[AES256_GCM,data:gkAJlYx0h6CYpL5wA/jRXyPv,iv:FS8VRLJpyqTHIDKgMvixn3BY5nmhaQk8XPXM809uvks=,tag:7ldVVqB/vTta9lWEKNd7tQ==,type:str]
-    SECRET_BOTKUBE_DISCORD_TOKEN: ENC[AES256_GCM,data:6o7YOkNXnIsRtJhRcqL5uAzs9lfw5YZzz93/ZlbyIWytfezfJAUWiW+snJYzRHf8GyUwl6vB8F0EwuQ=,iv:QnaS3t/1etLxsK/PpK8apgygPH8Q90zsec1H6TsF8IU=,tag:tWxBrkDnc7oj3mJ8JIRPzQ==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:asXtwoLOhoY=,iv:YoJrcaYjbu+ambwxdYkMkxknGSrkMezV0mSkPK2ILXk=,tag:rkQobZ1qPWiLx29JMDTPDw==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:+MCUaTtzy3yz17ystYCDcKHEfeE=,iv:jaGFMYF1WE95qumlYvXnc4ohRnQ9MAPC+hhg43g2XCI=,tag:SNMUz5RhU9+fK9Lk8tl9Pg==,type:str]
-    SECRET_GITEA_ADMIN_PASSWORD: ENC[AES256_GCM,data:VNq/7V22tdavl9ega0GZVg==,iv:c3v8IouAvG4ihOS+mn7YyzNEx0xyyC9klGFKoV1T+JQ=,tag:w9AXBjcd2kJnikLpMR8KUQ==,type:str]
-    SECRET_GITEA_POSTRES_PASSWORD: ENC[AES256_GCM,data:glGt3bb3F4dM3eVvz7QPKdwSO8BZLiNsMBmp,iv:JfJKKouv+RW660b2B2bTiTYsOKmxRdHTozDJ9T6OyiQ=,tag:vlzlzCyZKMS97hgHu8h7XQ==,type:str]
-    SECRET_GITEA_SECRET_KEY: ENC[AES256_GCM,data:ET4HgYUgdQqpFfgMu8Zdxw==,iv:NuWTehTKmBosomxP7PCBzGYO8fuDwgJEjklmbnmnGPI=,tag:KyxSiZ7As5QfBKAneKaBCg==,type:str]
-    SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:Yfo9HNkNu0zq9+0f9dztmA==,iv:qmR9UcNMT0HF/I6GY9zLG67IBJvfPptALHqu1KD4qx0=,tag:3xkjQaboC1/UZ5wWcTtvhg==,type:str]
-    SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:EJz4kA==,iv:AMuWsFEOYk2BJgeCMESWxN8oAsL1bKeWBNi9SBtPdRk=,tag:OOEB7FDQ2v7tH2pvq7z4Bg==,type:str]
-    SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:dqhMgw==,iv:wJNs77SK07ms2xaMLRFNeCfU5NLxWb5oL81lMFsSlDo=,tag:tYTQ8orydbzpCqw9HCXctQ==,type:str]
-    SECRET_UPTIMEROBOT_API_KEY: ENC[AES256_GCM,data:CGLL6l9+K5qe7iEH6aBY8PgvFZqPDBVjNcNe3iTcg9U=,iv:xz0bhkD66JmuUQ9M6ewXkntVwwN1pLDTvcZpzAvHS9Q=,tag:rcX6vYXh6dv0q2wfqEi0uQ==,type:str]
-    SECRET_NEXTDNS_ID: ENC[AES256_GCM,data:xM68UAqT,iv:LHhrKYUTz+bcOG7Caw8oabcvHfZP+LjAB3gAfFHeiwg=,tag:9TOxIYLM90enGvbfKmc0Fg==,type:str]
+  name: cluster-secrets
+  namespace: flux-system
+data:
+  HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:KL89MgbrUAvaBb4S,iv:lx4P+oQH5v3bKqjh5tp25lQGlxo1ixD2eML8+YIX16s=,tag:09f00DYM7budnir8QrsBog==,type:str]
+  HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:B35Y2r/3tZGGOZhF3+AdXQ==,iv:q+4MB53qACx2FjhTsQQk2f307aHhmZ4mrgJKCdrFQG8=,tag:Ch/wUF32qKBli8J/4u0r9Q==,type:str]
+  HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:8zIMYB/2QGQ=,iv:bCzBrxkI2UgfEXibLdMzrMgkpXPhG/HFTfcKwZLJQKg=,tag:Ikgv+LTN2C1DwcadHv1yhw==,type:str]
+  HASS_EXTERNAL_URL: ENC[AES256_GCM,data:V96QPbEowXn6hVNhzZWfWSDt/rrg0NoxTXscZTaypG0=,iv:4XPWc1HhUl/E3X6TSEpK2FI2f/dMoOg/ZBa+9kndlMk=,tag:4Hh+oZ9yqBgHA7mCjAHAtQ==,type:str]
+  HASS_RECORDER_POSTGRESQL: ENC[AES256_GCM,data:Y8iMGTBCiQ3uzSwYmB1H19UBl32kkrkuSbcgHmFlEM5TAjgza2NJv3oRUiQyZF7Ip30AX+dnRU4+jaIBUvBhULxCCHJHsmoK/aSaeST2HzQ74Tv5C8qJqa74OMO1xEcS/1ImhNqisc9uoMhs3/h7mzedmbz4JHws,iv:qLqs4GQ97Ic52ImWZ407qCLntWpPkDZPH3Qonq0GsUI=,tag:gMlv8tnEKuS7+N9uruCJqQ==,type:str]
+  HASS_ECOBEE_API_KEY: ENC[AES256_GCM,data:MsV+hop0KA3ex65xWiGJE8jnowmB0eETCLANi8pY0Rf5AecYxg0cHDj29Lk=,iv:u7w0HMYAq6TaM/BYZG2Tw2Ad7yORUHqX4R7WAe45z3w=,tag:GAXt0B5dpa36qpNDFP9i9w==,type:str]
+  HASS_AUGUST_PASSWORD: ENC[AES256_GCM,data:dALZ1unbiAOQplAp8pQ4Xw==,iv:P3Q+j9BV1SPJMgO1UPTVrSwi3mzDCjxQefIonw/k8xU=,tag:MBiF8HM0EeuATnIPH6+nPQ==,type:str]
+  HASS_AUGUST_EMAIL: ENC[AES256_GCM,data:g/SjS5Xt/u1QFr+nN5EKjP+V7WDOktSX,iv:j0LPsMnZmzgO3Fe1B1XzQQZzKWpM7L5VjFsJD9idjBg=,tag:UEWvvRxaglfqKhgHhLxwOg==,type:str]
+  HASS_NEST_CLIENT_ID: ENC[AES256_GCM,data:ZjKO6g3DXQfqJETE6xqy7xQZN7B2GL65+bsjAdOFs3zwkUzCoDBSea4vNwpakhndrejr6eX7KMyO36V3MNN/CaSaQdFTYSb8c8g1v8CDmsB8ifvZA1RLn7UUeN5HgXTS,iv:27bk2JiR03kzkcgN/IT/dIHbguB8elyxCXM+pkovCiA=,tag:2fpOGGacSFrawFVB0ROZsA==,type:str]
+  HASS_NEST_CLIENT_SECRET: ENC[AES256_GCM,data:DiWVEwniHBl4NusiRMXFnpVoCsJv0umAOmLpqhYZFD4=,iv:DnU0AQJRDpaN6iSoTAyicpPWOyGDqwjIa40GWIX9fI4=,tag:etBYJOtuyXuEbOyWZDdtbw==,type:str]
+  HASS_NEST_PROJECT_ID: ENC[AES256_GCM,data:2OI3txxCjDKtbxNkI278u1Q3ssQqDvy6sQZd/2BiMPlpNUOqz4xyVoUgKnzZPktz,iv:kURoDEZMNOKje18VM7crU7eV3mzAnlYLGCO/GqL+lWo=,tag:TeuqDo3X8OUiIIRphNZKXA==,type:str]
+  HASS_NEST_SUBSCRIBER_ID: ENC[AES256_GCM,data:xS7gTHHG/PGWRzJvFFlDY0WilRpnFxHYkDnk8JcygFZTOn+Etqfm7qdX7nGJnXKA9N6jYARVlg0qwAPdqH6m5L8qVncrTCZpmXHFJA==,iv:rjKLj1mYHW+P7mHwy41P9LoCP8Ej6yowdJfUT2JvDto=,tag:KloUWNMLMrh5V9EJncpRbQ==,type:str]
+  HASS_SPOTIFY_CLIENT_ID: ENC[AES256_GCM,data:PDFoHnmqGgfk54kJO+vFRr5Dej9J5OKZ6+yhLPJr3iNY/YGODEQt4KH39s8=,iv:RbKKY3arrbFP4yVRvj39s7H8uSEJzOZ22R6WcZCAa74=,tag:a4kLZF4pxaQTblR68f36Uw==,type:str]
+  HASS_SPOTIFY_CLIENT_SECRET: ENC[AES256_GCM,data:IJvgdC0+1xcP7Urdocl/uImuIzao3YRf9S0++6C8TKRI/ouW7ZHlFuIn2/w=,iv:wX681lIeEMQsEEM5Wbz7QNrfX2BOsBZhgNOIiquQAlE=,tag:IiirZdEn0vbgGGCm7aE7bA==,type:str]
+  HASS_BASEMENT_BACK_DOOR_CAMERA_MAIN: ENC[AES256_GCM,data:+EmSGPfKlggdu7FnJn6t7xHe81ZLzpbn8rwhc6mDUJkHD0bhKdkYuKmQvfBjG3xbq40ZVriZKQCw6jCHQcOv/OjaeoIY7iiqLzpF47lINhi/xfiP/OhjE/iNXyy7dHoGj4MQwdGtYLYnrYs6VXhW316ab3XQiQrGNP+L1s3pTyz2OfzS,iv:/W5biXhFV3GhPPxFoart2hCsNBWv96jlM+jmFUvNEEA=,tag:hxHXd4W8zlw973jzsjfwhw==,type:str]
+  HASS_BASEMENT_BACK_DOOR_CAMERA_SUB: ENC[AES256_GCM,data:bABaggLEDxbY43Su0O1LtGn+Xb2hLKQh9/rxQFxU+iX+4BXfUpPsX9T3TmyOQHcFcJ9++3BzeyiLWFTrHrJRKz1hcKylXnK2dyRNRqURTn2ICojS3kWAx2JoN9NUW1Krbi0tat2nchT5MJG03XkKqvlh7yiliBaXDbEPwSwflejNTF9C,iv:UIceCNyB/VQe1/vULNnjtKGImhIYAsf5OUduj6w2QCU=,tag:chZi9r/c+MjdI1WRF00bOg==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2021-05-03T13:04:48Z"
-    mac: ENC[AES256_GCM,data:MZ8vBwk9raWvgqA3Je1RyrWwBDLgqx/uAjsblXh4l6Er3E4y1oSy59o2GJcu2v8Jcy/x7KCWWuNBmVThN0IK/+lJ6Whco5ORcTbu0KmrD21OBp9llMRcpIZJh8poSnuQ4x5olxzqJi5KmOp1hcKFUCJcSITCQjSHKNt3Fq7S4rc=,iv:D8W5gnRFnHwTsqH5/2ISivxNUr1QcBAJMYF3EdujVEg=,tag:KyOmKEzA3WE80Lbx2JDnfA==,type:str]
-    pgp:
-        - created_at: "2021-05-02T13:49:23Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-            hQIMAwfpRihAg/tGAQ/+MEa4s0sVo7CXP+Knmpg8FUAxLoyfeTJ/JoyMfvx51A0N
-            a2+qdBpkMfzZytVgD9zOJC4Mrfbfg752WdRq9UiTSzgkr7VMTN+xSUOhZO3G6cKI
-            ROzUMeyFaHGf5RHFdt1LTauLElSpYLdT6hOE6pWwXj6C1JKyyt//kRhEHpHtA/gi
-            W9wf7eXUx3WVXDOAbQU0j/p0cgm5CBSIH2FthpIRr/fxW4C4ABG9jYL0edH6oSc8
-            aBOeM6z3Ha+2KVr1xbsGrviNsDAYoFAQyILWuXfmp/0ceguXhtjjOgiyLKSf9wJy
-            03QVdU1+XvA/IkqMCYoUCTZrNLXg2DPgTRMh5eMiMal9yxtSxM1eYIC0T1noOFxo
-            kzJ/fiiBNEzL4iICU/ALnVrp48P6VBNYPuY4erTwUcIoPFIMhvv2EoCEn5gH506G
-            NjpTiuTyKoSuAFIxJcIPISzNziJP4q/6t83nHsTxGUYgPvYIAj06UYINjFcAwcOq
-            HLvclgS8/Cx9upwYoB181snLK/ghu1Qxh2shXS+B1qKnH0v8iqMimq9sAjnqK34F
-            WtMzvMg4rIYxrU09KPJ3skMciAoQevPRzd4W8A5kCLCrghcTN2cwqsC7wNAOaNXa
-            sO3Mnmw6FYYz0/MhFAleWumt+eJteLv2ujj5AGBpVLzBA7sTgSXEkr44Vk7RjVHS
-            XgEDfHCt3qk1/ucrVHAGkawINtaxNV4RncTTQUrBqyYZB+raWT2qolifzNjX1bUk
-            PkONLUy/1Wmp3k2Nt0k7Y007ZGmJBh6YiHYsaPNRiF1XWhc5fNT42COdQGEignM=
-            =rCIg
-            -----END PGP MESSAGE-----
-          fp: 673F9E296113BAE74D9954A2A92853A46EA01574
-        - created_at: "2021-05-02T13:49:23Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-            hQIMA6zq3fPF3WITAQ//W7vvo2/BKbb4cY5G6Rj4mQBKVMDWadqFZ2Qq+uvpq4GO
-            jjlpDl0Wut8pEGcyWI6jkCHpDZ7TNUD109538QxqfAZYuTq8AH1zCKpaK6aRuG+a
-            ovgohRYLmL6nAByPQrjEU+Oq1bgrUczl58CyLkJPzHjE12ckzi9eslnVUIo9urER
-            s2W/CXA0Zc8EE/p/ed7aKefF9yUoG2O+sPAzLM8TaojjLpw5aWBZky96Lf65ZGgE
-            L4ey8leOFpxNCBWqc/n9vyP4V4sS2mIjSDa57pywh/8KRp8d61bHyV1yrNVbsY0o
-            OgpQMFJrZ9hQdwXQFqLy0xTUtxSkGREeea4YQ4gMB3mcs8WJ5HtwtztrUZ/Ko8lR
-            x1MMGKMqRvBe3xoc92L8mhfkrxK2S6P2n6TZMJ7WcGE+8C5QPDM/eD/y3SlkEaWZ
-            dbKm1VGth01jqewFcVeRtI8HBbgdEOiGeT0QY6J/tMpEFFMi95mTDvdZyuXwWFIl
-            UwiP929rNYPUGITmK+/jrgfgEk46ijmb38J5HRrecYSW8AL27nOzsxqzEDfckeuk
-            cQtAiJsudKLcMdYA5OL/oJoiXptDdNKvz96XAv5DHGWjnEQrOZ/iOWs1I3BB4MzL
-            xCVo1tASc23WMgogxVSe+mrfCcmNqlW/vflrAyftX3nnC0TvskdWhr0Ld9rH9GPS
-            XgEZNnA1xTsGLyCJHXYDfzEm5C6hG+1p0w2092V+UjcRl4oUwD/o+EWm1eOVk5Yt
-            E818FVdBE3NGSsPttYgnbXN6pVqBWh/+HCchogkJgh4CZYq2q24QqNcm0jfHs/Q=
-            =UrCJ
-            -----END PGP MESSAGE-----
-          fp: 554154FFF783DE317FCDA0EC77149AC618D714D6
-        - created_at: "2021-05-02T13:49:23Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-            hQIMAy9oM+0P010UARAAmy9/Snqq1Tzk2syVh0Kw9rKvImHlgLkQeJuIcn28ZwVO
-            snysmii3DBqqytH+n2XEFYu37E2cDzHTeLcU/jCWOenPF1K6jw8rrrF1sXE+WEDp
-            QNUpB9aLK40fWYleAt6zWLOdnKBnOS2+VQgQzZ0T7zS6vE80HOeDdIoPSeHR7N29
-            I+PJeB0vaCRBQw4ODqDEGiMEvKO/rKSd5L5/tO2gfDD9IJHCGPsv3xJdU1FHoxWH
-            pZUUMou5HyzYZWHEXaMAKkw3srEwkOKfVQ1EcT2M0CYS1Hpy57hPj3ezqU9nTkJU
-            /m3LFI3CxtirTWztKUGqEY1pIRRHl9oIef6LX0AiQhDsw1CduetpAa/xDRF38XmW
-            nfLvnHFWhKdZvHtzFO7ZH3yFvMEhkF9IumBxftDDNayABVE6Enjgym444OKs3/OK
-            guOfKj+KzYQfT+Ro+ECxOEsJSYYlH6DwbnTIBJakhyh+jlr2Un6Mz1Y9GVk7KVOL
-            XhH4peE2d4tXWG2VobgDUjXBDmrmgSMZcR2N/bYIGN63ZUcUcxbGUbCffO5/UA79
-            2KwoGKfriB+fxEIAZaCSENXlADXxJEV442txfp7T8FdTxOnTNdLaBmTN4Dy1TWPY
-            6EbJ3/iqKMDJfLi4eQLyfCR+oBXgX+NiIr0u1P1UlKvntk4Kix8g7dEI6jremqbS
-            XgHzwHvxkT29f9xZJg9Nvc1a9DDcLRGC3AoM4w8ZoLlflrewSv9zAmhsrZVCygCf
-            37TKYEVzsVaYWHroKRS2w/WaC4cz+3haElhLw+1qmUnwWw6y5W2pE0JbU6RS/tM=
-            =dcj9
-            -----END PGP MESSAGE-----
-          fp: 4B675CE4CC642516AA9AE1DAA88A97FA2C009E2D
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+  kms: []
+  gcp_kms: []
+  azure_kv: []
+  hc_vault: []
+  lastmodified: "2021-02-28T17:56:29Z"
+  mac: ENC[AES256_GCM,data:tgmvWZGmYrk9aIrMKzHbHBFYFdionlCk+LS3RjGZ0YNHKY5vxoUs6HlnufjtAo3FJt4PZZEPLGbeU8sWgeCXP0Ege2ylCEdc4e2BPs6nQEgpP/+3BFkQUlAyaNE3YY64v1YrqkFtWEDdKrYkbrGQ3eKlbOwqixg2+Iq3oMrxePI=,iv:aqJzVhREUjOav9Y8sWkNA0cz/XHrko7v0ch6xUruHtw=,tag:5bK9gKX639Hsq67FME6sZA==,type:str]
+  pgp:
+    - created_at: "2021-02-28T17:56:28Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMA8oSIqtHvng8AQ/7Bbc9QyOtu7fxjeIYn7rFuSzkTI679skO7fZRlEs4tcVg
+        S4u94kj3VCfhtHdT9PYl0CLpu5+zP79igfhUlCAOSblcgLIL+ljn2DB9tbbFSrJk
+        vypimOv/UsW9g49Dz0PULe3vsI2bn+6CAFwcYrfLWdf/Swn+SOXvvrgVHH6ia6IU
+        kErCtyIhFD4Z7Pub8NbIeXVf7/GOpi7tGENa4zUvNfPQqqSOTiSPuFhB2sVeDyeq
+        0Oa9jRkvz3dqIwGVJb+1w7yHKDD+E85hn4F1AKHCdH/axQ50zJnBXlZI55q3NYA+
+        uMYyqoHBLrlzRZTEWZTf1Wq6kijSAvETyVLUDi4B1M/OZVEDUNxHmYM32QTCnC7J
+        ioJkFY1AXfP4xlImBpMFPoyqWB8GyA1cTBeTN8nRrWxAZ5TzCm4UE3eFmyyQ9hUr
+        mg5TiZNR5AUEuDqSBHU+MO5YD+SO9PF3Fm5LtodgkbZ6pve4Ff/uWxWqOj1xlUh1
+        dYLJ7o3POb6aRtgagvfU4SeDSyBu7tvjyC4NpcNjoELO04RzevDwUwaMF9YqyG5O
+        NXAf7Upq0RnE8uOq7vRhVnn0ROtjtF96grruT8GGu7DU7qm5xva9vYLMkV8KK0cE
+        Q+XLtcG+D0UV3eL6yhY2LMpvevJCJC3l3ffVptptInIzorO+mHJjsnly+K0KTNLS
+        XgExuPeP0V+IzDsb9wR/kcu0+Dso+bDi3AQw73tN9C9Wuaq07DRBPlWkx/8AOsNc
+        rrV2byRYOLDn90rfNBOdPg0ZljwTZoMcPydrn/ltSL8aFX2p7TqGbn/dWmEizko=
+        =/cEk
+        -----END PGP MESSAGE-----
+      fp: DA8002060402EC39B195451D5CED80362B5A4EF2
+    - created_at: "2021-02-28T17:56:28Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMA8ORz3KkY6O4ARAAm/3vwenLTe3F2QaR6EduXzd89/hl3oA+51knN7LDtoxw
+        DD3Kc8CAA/vsKQSv26x+IyigdxUX5xEICPZ7TLk7oH/y/jqO39k7vhijDFxtGS3b
+        O6rbEZCPZ3jolV7ezMOZF1L73nKSBjLALty1FP0Qam0aaACvXlCK57uMiPLo45a1
+        NfIAhivn9dZ4uGTg3mwAein2WZ5zCPN2eyctt2wdn84zBhcIFflErYtE+juEobtP
+        y5KHrHk2IySnMHhDd6N9wrrArMmxNhBrs7dMKgez4ptUrTpqm29ilvwtTB9h+5xq
+        buxOoM/fRfbR+GoZ+ubCGXjBbjiCyZYZ+wwcgOaZMjR8ynk5bF0Jr29h82kzE3gE
+        2ClXra58MfgrHfLD9n6X2B6gObmtSdkufjMG1vyw/wpVZTXA9SkL5cuX0lrlWFyp
+        ACoFkQ48PrH+wDLiBS2xAYg/N9bAKT7CBx8cdM35izJEneFIX2HNXHupyc6Tik6F
+        5/PdEy+OM8OKGmMr++fkHdtYPqMxq+oeTVglp5XTwPMw9dwg6PaEaqGO+wLFOVYi
+        rHRyjKTNQBqMh7uvpSe7eOmK6kn3URaZWmcmD51zLjmP1Z7l3mGJpIiFtcXnJSF0
+        t87IdXxbREkiMzz1MAbxQvlmdgwywzOMy0eE0wHX8oy6Jsx4qdfpoIEBD7eaZaHS
+        XgE3rcepkVCC3pKYgS+cK0bOVG7r9B+te4IcbcNdnpT0zP1TG7kCoxTk0smMORIw
+        paInN+El/xN21mne9Xxi1+Z97W2l8bEQbnE1YBfnFuXSZTzKjiEM1GDZjKjnCPQ=
+        =eCBb
+        -----END PGP MESSAGE-----
+      fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
+  encrypted_regex: ^(data|stringData)$
+  version: 3.6.1
