add external-secrets crd

--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -4,7 +4,9 @@ kind: Kustomization
 resources:
 - cert-manager
 - external-dns
+- external-secrets
 - external-snapshotter
 - kube-prometheus-stack
+# - registry-creds
 - rook-ceph
 - traefik
