--- a/cluster/apps/network/certificates/certificate.yaml
+++ b/cluster/apps/network/certificates/certificate.yaml
@@ -13,5 +13,5 @@ spec:
   - 'ryanholt.net'
   - '*.ryanholt.net'
   issuerRef:
-    name: letsencrypt-prod
+    name: letsencrypt-production
     kind: ClusterIssuer
