--- a/cluster/apps/security/dex/helm-release.yaml
+++ b/cluster/apps/security/dex/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-prod"
+        cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
         - dex.holthome.net
       tls:
