--- a/cluster/apps/collab/gitea/helm-release.yaml
+++ b/cluster/apps/collab/gitea/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/proxy-body-size: 128m
         kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-prod"
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
       hosts:
       - "git.holthome.net"
       tls:
