--- a/cluster/apps/default/minio/helm-release.yaml
+++ b/cluster/apps/default/minio/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
         kubernetes.io/ingress.class: nginx
         kubernetes.io/tls-acme: "true"
         kubernetes.io/ingress.allow-http: "false"
-        cert-manager.io/cluster-issuer: letsencrypt-prod
+        cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
       - minio.holthome.net
       tls:
