--- a/cluster/apps/default/monica/helm-release.yaml
+++ b/cluster/apps/default/monica/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-prod"
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
       hosts:
       - host: crm.holthome.net
         paths:
