--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
       annotations:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
-        cert-manager.io/cluster-issuer: letsencrypt-prod
+        cert-manager.io/cluster-issuer: letsencrypt-production
         kubernetes.io/tls-acme: "true"
         nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
         nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start"
