--- a/cluster/apps/home/node-red/helm-release.yaml
+++ b/cluster/apps/home/node-red/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-prod
+        cert-manager.io/cluster-issuer: letsencrypt-production
         # nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
         # nginx.ingress.kubernetes.io/auth-signin: https://auth.holthome.net/oauth2/start
       hosts:
