--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: letsencrypt-prod
+          cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start?rd=$escaped_request_uri"
         hosts:
@@ -136,7 +136,7 @@ spec:
       #   annotations:
       #     kubernetes.io/ingress.class: "nginx"
       #     kubernetes.io/tls-acme: "true"
-      #     cert-manager.io/cluster-issuer: letsencrypt-prod
+      #     cert-manager.io/cluster-issuer: letsencrypt-production
       #   hosts:
       #   - grafana.holthome.net
       #   tls:
@@ -279,7 +279,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: letsencrypt-prod
+          cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start?rd=$escaped_request_uri"
         hosts:
