--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
             # nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
             # nginx.ingress.kubernetes.io/auth-signin: https://auth.holthome.net/oauth2/start
             kubernetes.io/tls-acme: "true"
-            cert-manager.io/cluster-issuer: letsencrypt-prod
+            cert-manager.io/cluster-issuer: letsencrypt-production
           hosts:
             - thanos.holthome.net
           tls:
