--- a/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
+++ b/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-prod"
+        cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
         - login.holthome.net
       tls:
